Working: Implement Bolztmann Softmax Algorithm for selecting VMs